Improve UI scaling and audio processing